--- a/.github/workflows/main_pixora.yml
+++ b/.github/workflows/main_pixora.yml
@@ -7,11 +7,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-
     steps:
       - uses: actions/checkout@v4
 
@@ -28,12 +25,12 @@ jobs:
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
 
-      - name: Install Composer dependencies
+      - name: Install composer dependencies
         run: |
           composer install --no-dev --prefer-dist --no-interaction
           composer dump-autoload -o
 
-      - name: Generate APP Key
+      - name: Generate key (safe if exists)
         run: php artisan key:generate --force || true
 
       - name: Optimize Laravel
@@ -41,42 +38,12 @@ jobs:
           php artisan config:cache
           php artisan route:cache
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: app
-          path: |
-            .
-            !node_modules/
-            !storage/logs/
-            !storage/framework/cache/
-            !storage/framework/sessions/
-            !tests/
-            !.github/
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      id-token: write
-      contents: read
-
-    steps:
-      - name: Download app artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: app
-
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
+      - name: Zip app for deployment
+        run: zip -r app.zip . -x "node_modules/*" "storage/logs/*" "storage/framework/sessions/*" "tests/*" ".github/*"
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'pixora'
-          slot-name: 'Production'
-          package: .
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
+          package: app.zip
